# CetoneSynth

./: .clang-format  CMakeLists.txt
.github/workflows/: build.yml
Images/: CetoneArtwork.hpp
Images/Backup/: Images.7z
Sources/: CetoneSynth.cpp  CetoneSynth.h  CetoneSynthDPF.cpp  CetoneSynthMain.cpp  CetoneSynthPlugin.cpp  CetoneUI.cpp  CetoneUI.hpp  CetoneUIHelper.cpp  DistrhoPluginInfo.h  Filter303.cpp  FilterButterworth24db.cpp  GlobalFunctions.cpp  GlobalFunctions.h  SynthEnvelope.cpp  VST2.4_Compatibility.hpp
